# tiny-qpu

./: .gitignore  LICENSE  README.md  build_exe.py  build_installer.py  create_icon.py  gen_all.py  generate_diagrams.py  generate_manual.py  manual.tex  patch_help_modal.py  pyproject.toml  requirements.txt  tiny-qpu-setup.iss  tiny_qpu_launcher.py
docs/: README_STABILIZER_SECTION.md  index.html  stabilizer_demo.html
examples/: run_bell_state.py
programs/: bell_state.qasm  deutsch_jozsa.qasm  grover_2qubit.qasm  teleportation.qasm
src/tiny_qpu/: __init__.py  __main__.py  circuit.py  gates.py  qpu.py  visualization.py
src/tiny_qpu/algorithms/: __init__.py
src/tiny_qpu/animations/: __init__.py  scenes.py
src/tiny_qpu/apps/: __init__.py  bb84.py  qaoa.py  qrng.py  vqe.py
src/tiny_qpu/backends/: __init__.py  density_matrix.py  stabilizer.py  statevector.py
src/tiny_qpu/benchmark/: __init__.py  animate.py  molecules.py  visualize.py
src/tiny_qpu/chemistry/: __init__.py  molecular.py  transforms.py
src/tiny_qpu/cli/: __init__.py
src/tiny_qpu/core/: __init__.py  circuit.py  gates.py  statevector.py
src/tiny_qpu/dashboard/: __init__.py  server.py
src/tiny_qpu/dashboard/templates/: index.html
src/tiny_qpu/error_correction/: __init__.py
src/tiny_qpu/gradients/: __init__.py  differentiation.py  hamiltonian.py
src/tiny_qpu/mitigation/: __init__.py  measurement.py  zne.py
src/tiny_qpu/noise/: __init__.py
src/tiny_qpu/qasm/: __init__.py  parser.py
tests/: test_chemistry.py  test_circuit.py  test_comprehensive.py  test_dashboard.py  test_density_matrix.py  test_gates.py  test_gradients.py  test_mitigation.py  test_qasm.py  test_qpu.py  test_stabilizer.py  test_statevector.py  test_tiny_qpu.py
visualizations/: chemistry_results.jsx
