[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-qpu"
version = "1.0.0"
description = "A minimal, fast quantum computing library with practical applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SK Biswas", email = "skbiswas1998@example.com"}
]
keywords = [
    "quantum computing",
    "quantum simulation",
    "QAOA",
    "QRNG",
    "BB84",
    "quantum cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.scripts]
tiny-qpu = "tiny_qpu.cli:main"

[project.urls]
Homepage = "https://github.com/SKBiswas1998/tiny-qpu"
Repository = "https://github.com/SKBiswas1998/tiny-qpu"
Issues = "https://github.com/SKBiswas1998/tiny-qpu/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
