[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tiny-qpu"
version = "0.2.0"
description = "A lightweight, composable quantum processing unit simulator for research and education"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SKBiswas1998" },
]
keywords = ["quantum computing", "quantum simulation", "qpu", "vqe", "quantum chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
]

[project.optional-dependencies]
chemistry = ["pyscf>=2.0", "openfermion"]
gpu = ["cupy-cuda12x"]
jax = ["jax", "jaxlib"]
accel = ["numba>=0.57"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "ruff",
    "mypy",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/SKBiswas1998/tiny-qpu"
Documentation = "https://tiny-qpu.readthedocs.io"
Repository = "https://github.com/SKBiswas1998/tiny-qpu"
Issues = "https://github.com/SKBiswas1998/tiny-qpu/issues"

[project.scripts]
tiny-qpu = "tiny_qpu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_qpu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "NPY"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
